--- a/languages/wp-job-manager-it_IT.po
+++ b/languages/wp-job-manager-it_IT.po
@@ -1,12 +1,13 @@
 # Copyright (C) 2014 WP Job Manager
 # This file is distributed under the same license as the WP Job Manager package.
 # Translators:
+# paletta, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
-"POT-Creation-Date: 2014-02-01 15:24:41+00:00\n"
-"PO-Revision-Date: 2014-01-31 08:21+0000\n"
+"POT-Creation-Date: 2014-03-01 18:44:04+00:00\n"
+"PO-Revision-Date: 2014-03-02 08:20+0000\n"
 "Last-Translator: mikejolley <mike.jolley@me.com>\n"
 "Language-Team: Italian (Italy) (http://www.transifex.com/projects/p/wp-job-manager/language/it_IT/)\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +19,7 @@ msgstr ""
 #: includes/admin/class-wp-job-manager-addons.php:50
 #: includes/admin/class-wp-job-manager-admin.php:55
 msgid "WP Job Manager Add-ons"
-msgstr ""
+msgstr "Componenti aggiuntivi per WP Job Manager"
 
 #: includes/admin/class-wp-job-manager-admin.php:52
 msgid "Settings"
@@ -26,17 +27,17 @@ msgstr "Impostazioni"
 
 #: includes/admin/class-wp-job-manager-admin.php:55
 msgid "Add-ons"
-msgstr ""
+msgstr "Componenti aggiuntivi"
 
 #: includes/admin/class-wp-job-manager-cpt.php:43
 #: includes/admin/class-wp-job-manager-cpt.php:44
 msgid "Approve Jobs"
-msgstr ""
+msgstr "Approva offerta"
 
 #: includes/admin/class-wp-job-manager-cpt.php:112
 #: includes/admin/class-wp-job-manager-cpt.php:114
 msgid "%s approved"
-msgstr ""
+msgstr "%s approvato"
 
 #: includes/admin/class-wp-job-manager-cpt.php:157
 msgid "Select a category"
@@ -115,7 +116,7 @@ msgstr "Categorie"
 
 #: includes/admin/class-wp-job-manager-cpt.php:241
 msgid "Featured?"
-msgstr ""
+msgstr "In evidenza?"
 
 #: includes/admin/class-wp-job-manager-cpt.php:242
 #: templates/job-dashboard.php:10
@@ -133,12 +134,12 @@ msgstr "Azioni"
 
 #: includes/admin/class-wp-job-manager-cpt.php:267
 msgid "Job ID: %d"
-msgstr ""
+msgstr "ID Offerta: %d"
 
 #: includes/admin/class-wp-job-manager-cpt.php:293
 #: includes/admin/class-wp-job-manager-cpt.php:298
 msgid "M j, Y"
-msgstr ""
+msgstr "M g, A"
 
 #: includes/admin/class-wp-job-manager-cpt.php:294
 msgid "by a guest"
@@ -146,11 +147,11 @@ msgstr "da utente non registrato"
 
 #: includes/admin/class-wp-job-manager-cpt.php:294
 msgid "by %s"
-msgstr "per %s"
+msgstr "da %s"
 
 #: includes/admin/class-wp-job-manager-cpt.php:311
 msgid "Approve"
-msgstr ""
+msgstr "Approva"
 
 #: includes/admin/class-wp-job-manager-cpt.php:318
 msgid "View"
@@ -167,115 +168,125 @@ msgstr "Modifica"
 msgid "Delete"
 msgstr "Cancella"
 
-#: includes/admin/class-wp-job-manager-settings.php:31
+#: includes/admin/class-wp-job-manager-settings.php:42
 #: includes/class-wp-job-manager-post-types.php:135
 #: includes/class-wp-job-manager-post-types.php:225
 msgid "Job Listings"
 msgstr "Offerte di lavoro"
 
-#: includes/admin/class-wp-job-manager-settings.php:37
+#: includes/admin/class-wp-job-manager-settings.php:48
 msgid "Jobs per page"
 msgstr "Offerte per pagina"
 
-#: includes/admin/class-wp-job-manager-settings.php:38
+#: includes/admin/class-wp-job-manager-settings.php:49
 msgid "How many jobs should be shown per page by default?"
 msgstr "Numero di offerte da visualizzare per pagina"
 
-#: includes/admin/class-wp-job-manager-settings.php:44
+#: includes/admin/class-wp-job-manager-settings.php:55
 msgid "Filled positions"
 msgstr "Offerte chiuse"
 
-#: includes/admin/class-wp-job-manager-settings.php:45
+#: includes/admin/class-wp-job-manager-settings.php:56
 msgid "Hide filled positions"
 msgstr "Non visualizzare le offerte chiuse"
 
-#: includes/admin/class-wp-job-manager-settings.php:46
+#: includes/admin/class-wp-job-manager-settings.php:57
 msgid "If enabled, filled positions will be hidden from the job list."
 msgstr "Se abilitato, le offerte chiuse non saranno visualizzate "
 
-#: includes/admin/class-wp-job-manager-settings.php:53
+#: includes/admin/class-wp-job-manager-settings.php:64
 msgid "Job categories"
 msgstr "Categorie"
 
-#: includes/admin/class-wp-job-manager-settings.php:54
+#: includes/admin/class-wp-job-manager-settings.php:65
 msgid "Enable job categories"
 msgstr "Abilitare le categorie"
 
-#: includes/admin/class-wp-job-manager-settings.php:55
+#: includes/admin/class-wp-job-manager-settings.php:66
 msgid ""
 "Choose whether to enable job categories. Categories must be setup by an "
 "admin for users to choose during job submission."
 msgstr "Abilitare le categorie? Amministratore gestisce le categorie  che possono essere utilizzate dal utente nella creazione dell'offerta."
 
-#: includes/admin/class-wp-job-manager-settings.php:62
+#: includes/admin/class-wp-job-manager-settings.php:73
 msgid "Job Submission"
 msgstr "Invio delle offerte"
 
-#: includes/admin/class-wp-job-manager-settings.php:67
+#: includes/admin/class-wp-job-manager-settings.php:78
 msgid "Account creation"
 msgstr "Creare profili"
 
-#: includes/admin/class-wp-job-manager-settings.php:68
+#: includes/admin/class-wp-job-manager-settings.php:79
 msgid "Allow account creation"
 msgstr "Permettere la creazione dei profili"
 
-#: includes/admin/class-wp-job-manager-settings.php:69
+#: includes/admin/class-wp-job-manager-settings.php:80
 msgid ""
 "If enabled, non-logged in users will be able to create an account by "
 "entering their email address on the job submission form."
+msgstr "Se abilitata gli utenti non loggati potranno creare un account inserendo la loro email nel form di invio offerta."
+
+#: includes/admin/class-wp-job-manager-settings.php:87
+msgid "Account Role"
 msgstr ""
 
-#: includes/admin/class-wp-job-manager-settings.php:76
+#: includes/admin/class-wp-job-manager-settings.php:88
+msgid ""
+"If you enable registration on your job submission form, choose a role for "
+"the new user."
+msgstr ""
+
+#: includes/admin/class-wp-job-manager-settings.php:95
 msgid "Account required"
 msgstr "Devi avere un account"
 
-#: includes/admin/class-wp-job-manager-settings.php:77
+#: includes/admin/class-wp-job-manager-settings.php:96
 msgid "Job submission requires an account"
 msgstr "Per inviare un offerta è necessario avere un profilo"
 
-#: includes/admin/class-wp-job-manager-settings.php:78
+#: includes/admin/class-wp-job-manager-settings.php:97
 msgid ""
 "If disabled, non-logged in users will be able to submit job listings without"
 " creating an account."
 msgstr "Se disabilitata gli utenti non registrati potranno inviare la propria offerta di lavoro senza creare un profilo."
 
-#: includes/admin/class-wp-job-manager-settings.php:85
+#: includes/admin/class-wp-job-manager-settings.php:104
 msgid "Approval Required"
 msgstr "Approvazione richiesta"
 
-#: includes/admin/class-wp-job-manager-settings.php:86
+#: includes/admin/class-wp-job-manager-settings.php:105
 msgid "New submissions require admin approval"
 msgstr "Le nuove offerte devono essere approvate da un amministratore"
 
-#: includes/admin/class-wp-job-manager-settings.php:87
+#: includes/admin/class-wp-job-manager-settings.php:106
 msgid "If enabled, new submissions will be inactive, pending admin approval."
 msgstr "Se abilitata le nuove offerte saranno inattive fino ad approvazione di un amministratore"
 
-#: includes/admin/class-wp-job-manager-settings.php:94
+#: includes/admin/class-wp-job-manager-settings.php:113
 msgid "Listing duration"
 msgstr "Durata offerta"
 
-#: includes/admin/class-wp-job-manager-settings.php:95
+#: includes/admin/class-wp-job-manager-settings.php:114
 msgid ""
 "How many <strong>days</strong> listings are live before expiring. Can be "
 "left blank to never expire."
 msgstr "Per quanti <strong>giorni</strong> sarà valida l'offerta? Se non compilato l'offerta non avrà scadenza."
 
-#: includes/admin/class-wp-job-manager-settings.php:101
+#: includes/admin/class-wp-job-manager-settings.php:120
 msgid "Submit Page Slug"
-msgstr ""
+msgstr "Inserisci slug della pagina"
 
-#: includes/admin/class-wp-job-manager-settings.php:102
+#: includes/admin/class-wp-job-manager-settings.php:121
 msgid ""
 "Enter the slug of the page where you have placed the [submit_job_form] "
 "shortcode. This lets the plugin know where the form is located."
-msgstr ""
+msgstr "Inserisci lo slug della pagina dove hai inserito lo shortcode [submit_job_form] per far si che il plugin sappia dove è collocato il modulo."
 
-#: includes/admin/class-wp-job-manager-settings.php:154
+#: includes/admin/class-wp-job-manager-settings.php:173
 msgid "Settings successfully saved"
 msgstr "Impostazioni  salvate corretamente"
 
-#: includes/admin/class-wp-job-manager-settings.php:233
+#: includes/admin/class-wp-job-manager-settings.php:252
 msgid "Save Changes"
 msgstr "Salvare le modifiche"
 
@@ -287,18 +298,18 @@ msgstr "Luogo di lavoro"
 #: includes/admin/class-wp-job-manager-writepanels.php:28
 #: includes/forms/class-wp-job-manager-form-submit-job.php:117
 msgid "e.g. \"London, UK\", \"New York\", \"Houston, TX\""
-msgstr ""
+msgstr "es. \"London, UK\", \"New York\", \"Houston, TX\""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:29
 #: includes/forms/class-wp-job-manager-form-submit-job.php:114
 msgid ""
 "Leave this blank if the job can be done from anywhere (i.e. telecommuting)"
-msgstr ""
+msgstr "Lasciare vuoto se il lavoro può essere svolto ovunque (es. telelavoro)"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:32
 #: includes/forms/class-wp-job-manager-form-submit-job.php:144
 msgid "Application email/URL"
-msgstr "Email/URL per le candidature"
+msgstr "Email/URL candidature"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:33
 msgid "URL or email which applicants use to apply"
@@ -335,25 +346,25 @@ msgstr "URL logo aziendale"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:57
 msgid "Position filled?"
-msgstr "Compilazione della posizione terminata?"
+msgstr "Posizione chiusa?"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:61
 msgid "Feature this job listing?"
-msgstr ""
+msgstr "Offerta in evidenza?"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:63
 msgid ""
 "Featured listings will be sticky during searches, and can be styled "
 "differently."
-msgstr ""
+msgstr "Le offerte in evidenza verranno sempre mostrate durante le ricerche e possono essere stilate differentemente."
 
 #: includes/admin/class-wp-job-manager-writepanels.php:66
 msgid "Job Expires"
-msgstr ""
+msgstr "Scadenza offerta"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:67
 msgid "yyyy-mm-dd"
-msgstr ""
+msgstr "aaaa-mm-gg"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:79
 msgid "Job Listing Data"
@@ -361,11 +372,11 @@ msgstr "Descrizione"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:97
 msgid "Use file"
-msgstr ""
+msgstr "Usa file"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:97
 msgid "Upload"
-msgstr ""
+msgstr "Carica"
 
 #: includes/class-wp-job-manager-ajax.php:63
 msgid "No more jobs found matching your selection."
@@ -385,10 +396,14 @@ msgstr "Si trova a &ldquo;%s&rdquo;"
 
 #: includes/class-wp-job-manager-geocode.php:130
 msgid "No results found"
-msgstr ""
+msgstr "Nessun risultato trovato"
 
 #: includes/class-wp-job-manager-geocode.php:133
 msgid "Query limit reached"
+msgstr "Limite di query raggiunto"
+
+#: includes/class-wp-job-manager-install.php:40
+msgid "Employer"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:45
@@ -459,7 +474,7 @@ msgstr "Tipi di offerta"
 #: includes/class-wp-job-manager-post-types.php:94
 msgctxt "Job type slug - resave permalinks after changing this"
 msgid "job-type"
-msgstr "Tipo di offerta"
+msgstr "tipologia-offerta-lavoro"
 
 #: includes/class-wp-job-manager-post-types.php:134
 msgid "Job Listing"
@@ -473,7 +488,7 @@ msgstr "Offerte"
 #: includes/class-wp-job-manager-post-types.php:144
 msgctxt "Job permalink - resave permalinks after changing this"
 msgid "job"
-msgstr "Offerta"
+msgstr "offerta-lavoro"
 
 #: includes/class-wp-job-manager-post-types.php:157
 msgid "Add New"
@@ -512,8 +527,8 @@ msgstr "Scaduta"
 #: includes/class-wp-job-manager-post-types.php:209
 msgid "Expired <span class=\"count\">(%s)</span>"
 msgid_plural "Expired <span class=\"count\">(%s)</span>"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Scaduto  <span class=\"count\">(%s)</span>"
+msgstr[1] "Scaduti  <span class=\"count\">(%s)</span>"
 
 #: includes/class-wp-job-manager-shortcodes.php:61
 msgid "Invalid Job ID"
@@ -543,8 +558,8 @@ msgstr "%s cancellata"
 msgid "You need to be signed in to manage your job listings."
 msgstr "Accedi al tuo account per gestire le tue offerte di lavoro."
 
-#: includes/class-wp-job-manager-shortcodes.php:187
-#: includes/class-wp-job-manager-shortcodes.php:217
+#: includes/class-wp-job-manager-shortcodes.php:195
+#: includes/class-wp-job-manager-shortcodes.php:225
 msgid "Load more job listings"
 msgstr "Carica più offerte di lavoro"
 
@@ -672,7 +687,7 @@ msgstr "&larr; Modifica offerta"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:633
 msgid "\"%s\" needs to be one of the following file types: %s"
-msgstr ""
+msgstr "\"%s\" deve essere una delle tipologie seguenti: %s"
 
 #: templates/account-signin.php:4
 msgid "Your account"
@@ -713,7 +728,7 @@ msgid "Your email"
 msgstr "Il tuo indirizzo email."
 
 #: templates/account-signin.php:38 templates/job-submit.php:24
-#: templates/job-submit.php:40
+#: templates/job-submit.php:41
 msgid "(optional)"
 msgstr "(opzionale)"
 
@@ -721,7 +736,7 @@ msgstr "(opzionale)"
 #: templates/content-single-job_listing.php:19
 #: templates/content-summary-job_listing.php:14
 msgid "Posted %s ago"
-msgstr ""
+msgstr "Pubblicato %s fa"
 
 #: templates/content-single-job_listing.php:8
 msgid "This job listing has expired"
@@ -733,7 +748,7 @@ msgstr "Questa offerta è stata chiusa"
 
 #: templates/form-fields/file-field.php:6
 msgid "remove"
-msgstr ""
+msgstr "rimuovi"
 
 #: templates/form-fields/file-field.php:6
 msgid "or"
@@ -741,7 +756,7 @@ msgstr "o"
 
 #: templates/form-fields/file-field.php:16
 msgid "Max. file size: %s."
-msgstr ""
+msgstr "Dimensione massima: %s"
 
 #: templates/job-application.php:5
 msgid "Apply for job"
@@ -751,7 +766,7 @@ msgstr "Candidati"
 msgid ""
 "To apply for this job <strong>email your details to</strong> <a "
 "class=\"job_application_email\" href=\"mailto:%1$s%2$s\">%1$s</a>"
-msgstr "Per candidarti <strong>invia i tuoi dati al</strong> <a class=\"job_application_email\" href=\"mailto:%1$s%2$s\">%1$s</a>"
+msgstr "Per candidarti <strong>invia i tuoi dati a</strong> <a class=\"job_application_email\" href=\"mailto:%1$s%2$s\">%1$s</a>"
 
 #: templates/job-application.php:14
 msgid "Apply using webmail: "
@@ -813,7 +828,7 @@ msgstr "Categoria"
 msgid "All Job Categories"
 msgstr "Tutte le categorie"
 
-#: templates/job-submit.php:34
+#: templates/job-submit.php:35
 msgid "Company details"
 msgstr "Informazioni sull'azienda"
 
@@ -828,19 +843,19 @@ msgid ""
 "Job submitted successfully. Your job listing will be visible once approved."
 msgstr "Offerta inviata e in attesa di approvazione "
 
-#: wp-job-manager-functions.php:196
+#: wp-job-manager-functions.php:214
 msgid "Reset"
 msgstr "Azzera"
 
-#: wp-job-manager-functions.php:200
+#: wp-job-manager-functions.php:218
 msgid "RSS"
 msgstr "RSS"
 
-#: wp-job-manager-functions.php:250
+#: wp-job-manager-functions.php:268
 msgid "Your email address isn&#8217;t correct."
 msgstr "L'indirizzo email non è corretto."
 
-#: wp-job-manager-functions.php:253
+#: wp-job-manager-functions.php:271
 msgid "This email is already registered, please choose another one."
 msgstr "Questa email è già registrata. Scegli un altro indirizzo email."
 
@@ -860,9 +875,13 @@ msgstr "In attesa di approvazione"
 msgid "Inactive"
 msgstr "Inattivo"
 
+#: wp-job-manager-template.php:197
+msgid "Job Application via \"%s\" listing on %s"
+msgstr ""
+
 #: wp-job-manager-template.php:255
 msgid "Anywhere"
-msgstr ""
+msgstr "Ovunque"
 
 #: wp-job-manager.php:96
 msgid "Are you sure you want to delete this job?"
@@ -874,7 +893,7 @@ msgstr "WP Job Manager"
 
 #. Plugin URI of the plugin/theme
 msgid "http://mikejolley.com/projects/wp-job-manager/"
-msgstr ""
+msgstr "http://mikejolley.com/projects/wp-job-manager/"
 
 #. Description of the plugin/theme
 msgid ""
