--- a/languages/wp-job-manager-ru_RU.po
+++ b/languages/wp-job-manager-ru_RU.po
@@ -1,7 +1,7 @@
 # Copyright (C) 2014 WP Job Manager
 # This file is distributed under the same license as the WP Job Manager package.
 # Translators:
-# mikejolley <mike.jolley@me.com>, 2014
+# Mike Jolley <mike.jolley@me.com>, 2014
 # Nikolay Nakuginkin <translator@mondaystar.ru>, 2014
 msgid ""
 msgstr ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
 "PO-Revision-Date: 2014-05-12 08:21+0000\n"
-"Last-Translator: mikejolley <mike.jolley@me.com>\n"
+"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/wp-job-manager/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
