--- a/languages/wp-job-manager-es_ES.po
+++ b/languages/wp-job-manager-es_ES.po
@@ -1,13 +1,14 @@
 # Copyright (C) 2014 WP Job Manager
 # This file is distributed under the same license as the WP Job Manager package.
 # Translators:
+# IlDucci <victor.gonfraile@hotmail.es>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
-"PO-Revision-Date: 2014-05-12 08:21+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
+"PO-Revision-Date: 2014-06-28 16:31+0000\n"
+"Last-Translator: IlDucci <victor.gonfraile@hotmail.es>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/wp-job-manager/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +25,7 @@ msgstr "Extensiones de WP Job Manager "
 msgid ""
 "Buying multiple add-ons? <a href=\"%s\">Check out the core add-on bundle "
 "&rarr;</a>"
-msgstr ""
+msgstr "¿Compras varios complementos? <a href=\"%s\">Echa un vistazo al paquete de complementos centrales &rarr;</a>"
 
 #: includes/admin/class-wp-job-manager-admin.php:57
 msgid "Settings"
@@ -289,23 +290,23 @@ msgstr "Cuantos <strong> días </strong> las ofertas laborales nos visibles ante
 
 #: includes/admin/class-wp-job-manager-settings.php:120
 msgid "Application method"
-msgstr ""
+msgstr "Método de solicitud"
 
 #: includes/admin/class-wp-job-manager-settings.php:121
 msgid "Choose what employers can use for their job application method."
-msgstr ""
+msgstr "Selecciona qué método puede usar un empleador para solicitar un trabajo."
 
 #: includes/admin/class-wp-job-manager-settings.php:124
 msgid "Email address or website URL"
-msgstr ""
+msgstr "Dirección email o URL de página web"
 
 #: includes/admin/class-wp-job-manager-settings.php:125
 msgid "Email addresses only"
-msgstr ""
+msgstr "Solo direcciones de email"
 
 #: includes/admin/class-wp-job-manager-settings.php:126
 msgid "Website URLs only"
-msgstr ""
+msgstr "Solo URLs de páginas web"
 
 #: includes/admin/class-wp-job-manager-settings.php:132
 msgid "Submit Page Slug"
@@ -403,7 +404,7 @@ msgstr "aaaa-mm-dd"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:70
 msgid "Posted by"
-msgstr ""
+msgstr "Publicado por"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:83
 msgid "Job Listing Data"
@@ -419,7 +420,7 @@ msgstr "Subir"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:269
 msgid "Guest user"
-msgstr ""
+msgstr "Invitado"
 
 #: includes/class-wp-job-manager-ajax.php:111
 msgid "Showing %s&ldquo;%s&rdquo; %sjobs"
@@ -445,7 +446,7 @@ msgstr "Límite de cola alcanzado"
 #: includes/class-wp-job-manager-geocode.php:153
 #: includes/class-wp-job-manager-geocode.php:157
 msgid "Geocoding error"
-msgstr ""
+msgstr "Error de geocodificación"
 
 #: includes/class-wp-job-manager-install.php:39
 msgid "Employer"
@@ -659,15 +660,15 @@ msgstr "Hecho"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:107
 msgid "Application email"
-msgstr ""
+msgstr "Email de solicitud"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:108
 msgid "you@yourdomain.com"
-msgstr ""
+msgstr "tu@tudominio.com"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:111
 msgid "Application URL"
-msgstr ""
+msgstr "URL de solicitud"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:112
 #: includes/forms/class-wp-job-manager-form-submit-job.php:182
@@ -729,15 +730,15 @@ msgstr "%s es campo requerido"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:325
 msgid "Please enter a valid application email address"
-msgstr ""
+msgstr "Introduce una dirección de email válida para la solicitud"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:330
 msgid "Please enter a valid application URL"
-msgstr ""
+msgstr "Introduce una URL válida para la solicitud"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:335
 msgid "Please enter a valid application email address or URL"
-msgstr ""
+msgstr "Introduce una dirección de email o URL válidas para la solicitud"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:456
 msgid "Preview job listing &rarr;"
@@ -783,7 +784,7 @@ msgstr "Registrarse"
 msgid ""
 "If you don&rsquo;t have an account you can %screate one below by entering "
 "your email address. A password will be automatically emailed to you."
-msgstr ""
+msgstr "Si no tienes cuenta, puedes crear una introduciendo tu dirección de email debajo. Te enviaremos una contraseña automáticamente."
 
 #: templates/account-signin.php:27
 msgid "optionally"
@@ -846,7 +847,7 @@ msgstr "Solicitar usando webmail:"
 msgid ""
 "To apply for this job please visit the following URL: <a href=\"%1$s\" "
 "target=\"_blank\">%1$s &rarr;</a>"
-msgstr ""
+msgstr "Para solicitar este trabajo, visita la siguiente dirección URL: <a href=\"%1$s\" target=\"_blank\">%1$s &rarr;</a>"
 
 #: templates/job-application.php:5
 msgid "Apply for job"
@@ -967,7 +968,7 @@ msgstr "WP Job Manager"
 
 #. Plugin URI of the plugin/theme
 msgid "https://wpjobmanager.com/"
-msgstr ""
+msgstr "https://wpjobmanager.com/"
 
 #. Description of the plugin/theme
 msgid ""
