--- a/languages/wp-job-manager-he_IL.po
+++ b/languages/wp-job-manager-he_IL.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
-"PO-Revision-Date: 2014-05-12 08:21+0000\n"
+"PO-Revision-Date: 2014-06-28 12:01+0000\n"
 "Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
 "Language-Team: Hebrew (Israel) (http://www.transifex.com/projects/p/wp-job-manager/language/he_IL/)\n"
 "MIME-Version: 1.0\n"
@@ -684,7 +684,7 @@ msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:138
 msgid "Job type"
-msgstr ""
+msgstr "סוג משרה"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:147
 msgid "Job category"
@@ -939,7 +939,7 @@ msgstr ""
 
 #: wp-job-manager-template.php:118
 msgid "Expired"
-msgstr ""
+msgstr "הסתיים"
 
 #: wp-job-manager-template.php:120
 msgid "Pending Review"
